Closed Bug 388181 Opened 18 years ago Closed 18 years ago

Crash closing detached JavaScript alert sheet [@ TestWindowGroupAttributes] [@ nsMacEventHandler::HandleActivateEvent]

Categories

(Core Graveyard :: Widget: Mac, defect)

1.8 Branch
PowerPC
macOS
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: ddkilzer, Assigned: MatsPalmgren_bugz)

References

()

Details

(Keywords: crash, testcase, verified1.8.1.8)

Crash Data

Attachments

(4 files)

* SUMMARY Crash in Firefox 2.0.0.4 on Mac OS X 10.4.10 (8R218) when opening a particular URL, closing the browser window, then closing a detached JavaScript alert sheet. * STEPS TO REPRODUCE 1. Launch Firefox 2.0.0.4. 2. Open URL: http://bugs.webkit.org/attachment.cgi?id=15496 3. Wait until "Whatever" appears in right frame. (NOTE: Page never stops loading.) 4. Close browser window. 5. Switch to another OS X application (Finder, whatever). 6. Switch back to Firefox. 7. Dismiss JavaScript alert sheet that has now been painted without a browser window. 8. Firefox crashes. * REGRESSION Only tested with Firefox 2.0.0.4 on Mac OS X 10.4.10 (8R218). * NOTES Talkback incident filed on the first crash (subsequent crashes did not create a Talkback incident): http://talkback-public.mozilla.org/search/start.jsp?search=2&type=iid&id=34039143 The attachment that causes a crash is for this WebKit bug: http://bugs.webkit.org/show_bug.cgi?id=14599
no crash for me with Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.1.5) Gecko/2007071317 Firefox/2.0.0.5 - 2005 RC2
Attached image Extensions installed
Is there a better way to list extensions installed than a screenshot?
I can reproduce the crash in 2.0.0.4 and 2.0.0.5-RC2 on MacOSX 10.4.10 (no add-ons except the default DOMI and Talkback). The crash didn't trigger Talkback for me.
Assignee: nobody → joshmoz
Severity: normal → critical
Component: General → Widget: Cocoa
Product: Firefox → Core
QA Contact: general → cocoa
Version: 2.0 Branch → 1.8 Branch
Mats, can you attach a system crash log?
Attached file Crash data
1.8-only, and thus Widget: Mac rather than Widget: Cocoa, no?
True.
Component: Widget: Cocoa → Widget: Mac
QA Contact: cocoa → mac
Attached patch Patch rev. 1Splinter Review
Reset sLastActive when the window is destroyed. Nulling out mWindowPtr isn't necessary to fix the crash here but it makes the code more robust against similar problems in the future.
Assignee: joshmoz → mats.palmgren
Status: NEW → ASSIGNED
Attachment #272494 - Flags: review?(joshmoz)
I think bug 378990 is the same thing.
Blocks: 378990
Attachment #272494 - Flags: review?(joshmoz) → review+
Comment on attachment 272494 [details] [diff] [review] Patch rev. 1 sr for branches please.
Attachment #272494 - Flags: superreview?(roc)
Attachment #272494 - Flags: superreview?(roc) → superreview+
Attachment #272494 - Flags: approval1.8.1.7?
Attachment #272494 - Flags: approval1.8.1.6?
Attachment #272494 - Flags: approval1.8.1.6?
Keywords: talkbackid
Summary: Crash closing detached JavaScript alert sheet → Crash closing detached JavaScript alert sheet [@ TestWindowGroupAttributes] [@ nsMacEventHandler::HandleActivateEvent]
Andrew Schultz thought that my issue might be this bug. Here's my details: Mac G4/733 1.5gb ram, OS 10.4.10. FF v2.0.0.6 SM v1.1.4 When accessing American Airlines employee flight booking site SM crashes (unexpected quit) out each time. But FireFox works fine. Both at latest shipping versions. I have crash logs. But I can't tell anyone how to reproduce the problem as I can't give out my wife's employee login credentials. Way too many things hide behind this login. Want me to post a crash log?
(In reply to comment #11) > Want me to post a crash log? Have you submitted the crashes to Talkbalk? If so, post the Talkback IDs here.
(In reply to comment #12) > (In reply to comment #11) > > Want me to post a crash log? > > Have you submitted the crashes to Talkbalk? If so, post the Talkback IDs here. > SeaMonkey v1.1.4 has talkback?
(In reply to comment #13) > SeaMonkey v1.1.4 has talkback? It doesn't? Sorry, I assumed it did. Does this reproduce on Firefox 2.0.0.x?
(In reply to comment #11) > Want me to post a crash log? Yes, please attach crash logs.
A crash log for the following setup: Mac G4/733 1.5gb ram, OS 10.4.10. FF v2.0.0.6 SM v1.1.4 No extensions installed. When accessing American Airlines employee flight booking site SM crashes (unexpected quit) out each time. But FireFox works fine. Both at latest shipping versions. I have crash logs. But I can't tell anyone how to reproduce the problem as I can't give out my wife's employee login credentials. Way too many things hide behind this login.
Comment on attachment 272494 [details] [diff] [review] Patch rev. 1 approved for 1.8.1.7, a=dveditz for release-drivers
Attachment #272494 - Flags: approval1.8.1.7? → approval1.8.1.7+
Checked in on MOZILLA_1_8_BRANCH mozilla/widget/src/mac/nsMacEventHandler.cpp 1.172.4.25 mozilla/widget/src/mac/nsMacEventHandler.h 1.41.4.14 mozilla/widget/src/mac/nsMacWindow.cpp 1.158.2.30 mozilla/widget/src/mac/nsWindow.cpp 1.232.2.9 -> FIXED
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1.8
Resolution: --- → FIXED
Blocks: 399065
verified fixed for 1.8.1.8 using Mozilla/5.0 (Macintosh; U; Intel Mac OS X; en-US; rv:1.8.1.8) Gecko/2007100816 Firefox/2.0.0.8 and the steps to reproduce from comment #0 no crash -> adding verified keyword
Product: Core → Core Graveyard
Crash Signature: [@ TestWindowGroupAttributes] [@ nsMacEventHandler::HandleActivateEvent]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: