Clear window references more carefully before ::DisposeWindow(). b=388181 r=joshmoz sr=roc a=dveditz